manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naro-vorn9061-gitlab-spring-api-new-deployment
  labels:
    app: naro-vorn9061-gitlab-spring-api-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naro-vorn9061-gitlab-spring-api-new
  template:
    metadata:
      labels:
        app: naro-vorn9061-gitlab-spring-api-new
    spec:
      containers:
        - name: naro-vorn9061-gitlab-spring-api-new-container
          image: pipejet/naro-vorn9061-gitlab-spring-api-new:0
          ports:
            - containerPort: 8080
